# markov-text-cpp

./: .gitignore  CMakeLists.txt  README.md
data/: sample.txt
include/markov/: generator.hpp  model.hpp  tokenizer.hpp  trainer.hpp  types.hpp
src/: generator.cpp  main.cpp  model.cpp  tokenizer.cpp  trainer.cpp  types.cpp
